--- a/wp-content/themes/affstream/styles/home-page-blog.scss
+++ b/wp-content/themes/affstream/styles/home-page-blog.scss
@@ -4,67 +4,73 @@
   display: flex;
   flex-direction: column;
   width: 100%;
-  margin-bottom: 200px;
-  @include breakpoint(desktop){
-    max-width: 1200px;
-    margin: 0 auto 100px;
-  }
-  @include breakpoint(mobile){
-    margin-bottom: 70px;
-  }
+  padding: 54px 0;
+  background: #FFFFFF;
+  font-family: "SF Pro Display", sans-serif;
+  overflow: hidden;
+
   .home-blog-title{
-    background-repeat: no-repeat;
-    background-position: left;
-    margin-bottom: 47px;
-    display: flex;
-    justify-content: center;
-    @include breakpoint(desktop){
-      background-size: 80% 100%;
-    }
-    @include breakpoint(tablet){
-      background-size: calc(100% - 10px) 100%;
-      svg{
-        max-width: 28%;
-      }
-    }
+    color: #100F0F;
+    font-size: 60px;
+    font-style: italic;
+    font-weight: 900;
+    line-height: normal;
+    text-transform: uppercase;
+    text-align: center;
+    margin-bottom: 50px;
     @include breakpoint(mobile){
-      svg{
-        max-width: 50%;
-        height: auto;
-      }
+      font-size: 53px;
+      margin-bottom: 30px;
     }
   }
   .container{
-    padding: 0 40px;
     box-sizing: border-box;
-    @include breakpoint(mobile){
+    max-width: 1500px;
+    margin: 0 auto;
+    @include  breakpoint(desktop){
+      max-width: 1200px;
+      padding: 0 16px;
+    }
+
+    @include breakpoint(tablet){
       padding: 0;
     }
   }
+
   .top-blog{
     display: flex;
-    margin-bottom: 30px;
+    margin-bottom: 25px;
     @include breakpoint(tablet){
-      flex-direction: column;
       margin-bottom: 40px;
     }
     @include breakpoint(mobile){
-      margin: 0 10px 40px;
+      margin-bottom:  0;
+    }
+    .blog-post {
+      display: flex;
+      gap: 48px;
+      padding: 16px;
+      @include breakpoint(tablet){
+        flex-direction: column;
+        gap: 40px;
+      }
+      img{
+        box-shadow: 0px 5px 10px 0px rgba(0, 0, 0, 0.25);
+        margin: 0;
+      }
     }
     .info-container{
       max-width: 50%;
-      margin-left: 60px;
       display: flex;
       flex-direction: column;
       justify-content: start;
       align-items: start;
       @include breakpoint(tablet){
-        max-width: 90%;
+        max-width: 100%;
         margin: 0 auto;
       }
       @include breakpoint(mobile){
         max-width: 100%;
-        margin: 0 10px;
       }
       .post-labels{
         display: flex;
@@ -116,38 +122,77 @@
           }
         }
       }
-      h3{
-        font-size: 39.052px;
+      .title{
+        color: #100F0F;
+        font-size: 25px;
+        font-style: normal;
         font-weight: 700;
-        line-height: 99.836%;
-        letter-spacing: -0.195px;
+        line-height: 99.836%; /* 24.959px */
+        letter-spacing: -0.125px;
         text-transform: uppercase;
-        margin-top: 40px;
-        margin-bottom: 50px;
+        margin-bottom: 30px;
+        @include breakpoint(desktop){
+          font-size: 22px;
+          margin-bottom: 20px;
+        }
         @include breakpoint(large-tablet){
           margin-bottom: 12px;
           margin-top: 20px;
         }
+        @include breakpoint(tablet){
+          font-size: 28px;
+        }
         @include breakpoint(mobile){
-          margin-top: 35px;
-          margin-bottom: 35px;
-          color: #EDEDFF;
+          margin-bottom: 25px;
           font-size: 26px;
           font-style: normal;
           font-weight: 700;
           letter-spacing: -0.13px;
         }
       }
+       .category {
+        display: flex;
+         flex-wrap: wrap;
+      }
+      .category {
+        margin-bottom: 20px;
+        display: flex;
+        gap: 20px;
+        @include breakpoint(mobile){
+          gap: 10px;
+        }
+        .item {
+          border-radius: 29.982px;
+          border: 1.517px solid #100F0F;
+          padding: 5px 20px;
+          position: relative;
+          z-index: 100;
+          background: #FFFFFF;
+          color: #100F0F;
+          font-size: 15px;
+          font-style: normal;
+          font-weight: 500;
+          line-height: 118.8%; /* 17.82px */
+          letter-spacing: -0.075px;
+          @include breakpoint(mobile){
+            padding: 5px 10px;
+          }
+          &:last-child {
+            margin-right: 0;
+          }
+        }
+      }
+
       p{
-        color: #EDEDFF;
-        font-size: 20px;
+        color: #100F0F;
+        font-size: 16px;
+        font-style: normal;
         font-weight: 500;
-        line-height: 120%;
-        margin-top: 0;
+        line-height: 120%; /* 19.2px */
         @include breakpoint(mobile){
           font-size: 17px;
           font-style: normal;
-          margin-bottom: 35px;
+          margin-bottom: 25px;
         }
       }
       .see-more{
@@ -157,15 +202,20 @@
         align-items: center;
         margin-top: auto;
         transition: all 0.3s linear;
-        color: #EDEDFF;
-        font-size: 25px;
+        background: #100F0F;
+        color: #FFF;
+        padding: 10px 15px;
+        font-size: 15px;
         font-style: normal;
         font-weight: 700;
-        line-height: 91.182%;
+        line-height: normal; /* 13.677px */
         text-transform: uppercase;
+        @include breakpoint(desktop){
+          padding: 7px 10px;
+        }
         @include breakpoint(tablet){
           font-weight: 500;
-          font-size: 22px;
+          font-size: 18px;
         }
         @include breakpoint(mobile){
           font-size: 17.937px;
@@ -193,10 +243,9 @@
       max-width: 50%;
       width: 100%;
       border-radius: 15px;
-      border: 2px #0C62FD solid;
-      object-fit: cover;
+      height: fit-content;
       @include breakpoint(tablet){
-        max-width: 90%;
+        max-width: 100%;
         margin: 0 auto 40px;
       }
       @include breakpoint(mobile){
@@ -209,29 +258,39 @@
   .other-blogs-pages{
     display: flex;
     @include breakpoint(tablet){
-      max-width: 90%;
+      max-width: 100%;
       margin: 0 auto;
     }
     @include breakpoint(mobile){
       max-width: 100%;
-      margin-left: 10px;
     }
-    .blog-post{
-      margin-right: 36px;
-      border-radius: 10px;
+    .blog-slider{
+      padding: 16px;
+    }
+    .swiper-slide{
       img{
         border-radius: 10px;
-        max-height: 170px;
-        border: 2px #0C62FD solid;
-        object-fit: cover;
+        overflow: hidden;
+      }
+    }
+    .swiper-slide-active{
+      position: relative;
+     & img{
+       box-shadow: 0px 0px 10px 0px #0C62FD;
+     }
+    }
+
+    .blog-post{
+      margin-right: 36px;
+      display: flex;
+      cursor: pointer;
+      img{
+        width: 100%;
+        height: auto;
+
       }
       &:last-child{
         margin-right: 0;
-      }
-      &.active{
-        img{
-          border: 2px #fff solid;
-        }
       }
     }
   }
