--- a/wp-content/themes/affstream/styles/main.scss
+++ b/wp-content/themes/affstream/styles/main.scss
@@ -840,6 +840,7 @@ img, video {
 .advantages-cards {
   max-width: 1650px;
   margin: 60px auto 0;
+  overflow: hidden;
   @include breakpoint(desktop){
     max-width: 1200px;
   }
@@ -1321,15 +1322,18 @@ img, video {
   margin-bottom: 180px;
   position: relative;
   overflow: hidden;
+  padding-top: 70px;
   @include breakpoint(desktop) {
-    padding: 0 10px;
+    padding: 50px 10px 0;
     box-sizing: border-box;
     margin-bottom: 140px;
+
   }
   @include breakpoint(tablet){
     margin-bottom: 100px;
   }
   @include breakpoint(mobile) {
+
     margin-bottom: 70px;
   }
 
