--- a/wp-content/themes/affstream/styles/single-page.scss
+++ b/wp-content/themes/affstream/styles/single-page.scss
@@ -93,6 +93,50 @@
         box-shadow: none;
         padding: 0;
       }
+      .main-title{
+        color: #100F0F;
+        font-family: "SF Pro Display", sans-serif;
+        font-size: 40px;
+        font-style: normal;
+        font-weight: 700;
+        line-height: normal;
+        letter-spacing: -0.2px;
+        @include breakpoint(mobile){
+          font-size: 28px;
+        }
+      }
+      h2,h3{
+        color: #100F0F;
+        font-size: 30px;
+        font-style: normal;
+        font-weight: 700;
+        line-height: normal;
+        @include breakpoint(mobile){
+          font-size: 24px;
+        }
+      }
+
+      li{
+        font-size: 19px;
+        line-height: 150%;
+        @include breakpoint(mobile){
+          font-size: 16px;
+        }
+      }
+      p{
+        color: #100F0F;
+        font-size: 19px;
+        font-style: normal;
+        font-weight: 400;
+        line-height: 150%;
+        img {
+          width: auto;
+          height: auto;
+        }
+        @include breakpoint(mobile){
+          font-size: 16px;
+        }
+      }
       .category{
         display: flex;
         align-items: center;
