--- a/wp-content/themes/affstream/styles/glossary.css
+++ b/wp-content/themes/affstream/styles/glossary.css
@@ -61,6 +61,7 @@
   line-height: normal;
   text-transform: uppercase;
   margin-bottom: 25px;
+  font-family: "SF Pro Display", sans-serif;
 }
 @media (max-width: 767px) {
   .glossary #selected-letter {
