--- a/wp-content/themes/affstream/styles/glossary.scss
+++ b/wp-content/themes/affstream/styles/glossary.scss
@@ -57,6 +57,7 @@
     line-height: normal;
     text-transform: uppercase;
     margin-bottom: 25px;
+    font-family: "SF Pro Display", sans-serif;
     @include breakpoint(mobile) {
       font-size: 25px;
       font-style: italic;
