--- a/wp-content/themes/affstream/styles/home-page-blog.scss
+++ b/wp-content/themes/affstream/styles/home-page-blog.scss
@@ -8,7 +8,14 @@
   background: #FFFFFF;
   font-family: "SF Pro Display", sans-serif;
   overflow: hidden;
-
+  max-width: 98%;
+  margin: 0 auto;
+  border-radius: 20px;
+  @include breakpoint(desktop){
+    border-radius: 0;
+    margin: auto;
+    max-width: 100%;
+  }
   .home-blog-title{
     color: #100F0F;
     font-size: 60px;
@@ -27,6 +34,7 @@
     box-sizing: border-box;
     max-width: 1500px;
     margin: 0 auto;
+    position: relative;
     @include  breakpoint(desktop){
       max-width: 1200px;
       padding: 0 16px;
@@ -34,6 +42,22 @@
 
     @include breakpoint(tablet){
       padding: 0;
+    }
+    .decoration{
+      position: absolute;
+      right: 0;
+      top: -25%;
+      animation: rotate 10s linear infinite;
+      @include breakpoint(desktop){
+        top: -30%;
+        max-width: 100px;
+        svg{
+          max-width: 100%;
+        }
+      }
+      @include breakpoint(mobile){
+        display: none;
+      }
     }
   }
 
@@ -53,6 +77,9 @@
       @include breakpoint(tablet){
         flex-direction: column;
         gap: 40px;
+      }
+      @include breakpoint(mobile){
+        gap: 20px;
       }
       img{
         box-shadow: 0px 5px 10px 0px rgba(0, 0, 0, 0.25);
