--- a/wp-content/themes/affstream/styles/single-page.scss
+++ b/wp-content/themes/affstream/styles/single-page.scss
@@ -87,7 +87,7 @@
       background: #FFF;
       box-shadow: 0px 0px 10.84818px 0px rgba(0, 0, 0, 0.25);
       @include breakpoint(desktop){
-        padding: 16px;
+        padding: 25px;
       }
       @include breakpoint(mobile){
         box-shadow: none;
@@ -105,17 +105,18 @@
           font-size: 28px;
         }
       }
-      h2,h3{
+      h2,h3,h4,h5,h6{
         color: #100F0F;
         font-size: 30px;
         font-style: normal;
         font-weight: 700;
         line-height: normal;
+        text-decoration: none;
+        text-transform: none;
         @include breakpoint(mobile){
           font-size: 24px;
         }
       }
-
       li{
         font-size: 19px;
         line-height: 150%;
