--- a/wp-content/themes/affstream/blocks/affstream-services/style.css
+++ b/wp-content/themes/affstream/blocks/affstream-services/style.css
@@ -53,19 +53,95 @@
 }
 .affstream-services .affstream-services-container {
   padding-bottom: 30px;
+  padding: 0 16px;
 }
 .affstream-services .affstream-services-container .service-card {
   border-radius: 10px;
   background: #FFF;
   margin-bottom: 20px;
+  align-items: center;
   border-radius: 10px;
   background: #FFF;
-  padding: 0 16px;
+  position: relative;
+  display: block;
+}
+.affstream-services .affstream-services-container .service-card:hover .single-page-link {
+  transform: translateX(10px);
+}
+.affstream-services .affstream-services-container .service-card:hover .single-page-link svg circle {
+  fill: black;
+}
+.affstream-services .affstream-services-container .service-card .single-page-link {
+  transition: all 0.3s linear;
+  padding-right: 30px;
+}
+@media (max-width: 1599px) {
+  .affstream-services .affstream-services-container .service-card .single-page-link {
+    margin-left: auto;
+  }
+  .affstream-services .affstream-services-container .service-card .single-page-link svg {
+    width: 50px;
+    height: 50px;
+  }
+}
+.affstream-services .affstream-services-container .service-card:last-child {
+  margin-bottom: 0;
+}
+.affstream-services .affstream-services-container .service-card .top-style {
+  display: flex;
+  align-items: center;
+  color: #FFF;
+  leading-trim: both;
+  text-edge: cap;
+  font-family: "SF Pro Display", sans-serif;
+  font-size: 25px;
+  font-style: italic;
+  font-weight: 900;
+  line-height: normal;
+  text-transform: uppercase;
+  padding: 10px;
+  height: fit-content;
+}
+.affstream-services .affstream-services-container .service-card .is-top {
+  position: absolute;
+  left: -10px;
+  bottom: 0;
+  z-index: 1;
+  top: 50%;
+  transform: translate(-100%, -50%);
+}
+@media (max-width: 1400px) {
+  .affstream-services .affstream-services-container .service-card .is-top {
+    display: none;
+  }
+}
+@media (max-width: 1023px) {
+  .affstream-services .affstream-services-container .service-card {
+    grid-template-columns: 150px 1fr 200px auto;
+    gap: 20px;
+  }
 }
 @media (max-width: 767px) {
   .affstream-services .affstream-services-container .service-card {
     grid-template-columns: 1fr;
     gap: 20px;
+  }
+}
+@media (max-width: 1400px) {
+  .affstream-services .affstream-services-container .service-card.top_card .card-container {
+    grid-template-columns: 200px 40% auto 70px 10%;
+  }
+}
+@media (max-width: 1023px) {
+  .affstream-services .affstream-services-container .service-card.top_card .card-container {
+    grid-template-columns: 1fr 1fr;
+    grid-row-gap: 20px;
+  }
+}
+@media (max-width: 767px) {
+  .affstream-services .affstream-services-container .service-card.top_card .card-container {
+    grid-template-columns: 1fr;
+    padding: 20px 15px;
   }
 }
 .affstream-services .affstream-services-container .service-card .card-container {
@@ -88,11 +164,6 @@
     grid-column-gap: 20px;
   }
 }
-@media (max-width: 1400px) {
-  .affstream-services .affstream-services-container .service-card .card-container {
-    grid-template-columns: 200px 40% auto 70px 10%;
-  }
-}
 @media (max-width: 1023px) {
   .affstream-services .affstream-services-container .service-card .card-container {
     grid-template-columns: 1fr 1fr;
@@ -105,7 +176,17 @@
     padding: 20px 15px;
   }
 }
-@media (max-width: 767px) {
+@media (min-width: 1400px) {
+  .affstream-services .affstream-services-container .service-card .card-container .is-top-inner {
+    display: none;
+  }
+}
+@media (max-width: 1023px) {
+  .affstream-services .affstream-services-container .service-card .card-container .is-top-inner {
+    display: none;
+  }
+}
+@media (max-width: 1023px) {
   .affstream-services .affstream-services-container .service-card .card-container .service-icon {
     display: flex;
     align-items: center;
@@ -118,21 +199,11 @@
 .affstream-services .affstream-services-container .service-card .card-container .service-icon .is-top-mobile {
   display: none;
 }
-@media (max-width: 767px) {
+@media (max-width: 1023px) {
   .affstream-services .affstream-services-container .service-card .card-container .service-icon .is-top-mobile {
     display: block;
     font-size: 18px;
     padding: 7px;
-  }
-}
-@media (min-width: 1400px) {
-  .affstream-services .affstream-services-container .service-card .card-container .is-top-inner {
-    display: none;
-  }
-}
-@media (max-width: 1023px) {
-  .affstream-services .affstream-services-container .service-card .card-container .is-top-inner {
-    display: none;
   }
 }
 .affstream-services .affstream-services-container .service-card .card-container .service-description p {
@@ -150,6 +221,11 @@
     font-size: 18px;
   }
 }
+@media (max-width: 1023px) {
+  .affstream-services .affstream-services-container .service-card .card-container .service-description p {
+    font-size: 14px;
+  }
+}
 .affstream-services .affstream-services-container .service-card .card-container .monthly-price p {
   color: #0C62FD;
   leading-trim: both;
@@ -160,15 +236,40 @@
   line-height: normal;
   margin-bottom: 0;
 }
+@media (max-width: 1023px) {
+  .affstream-services .affstream-services-container .service-card .card-container .monthly-price p {
+    font-size: 14px;
+  }
+}
+.affstream-services .affstream-services-container .service-card .card-container .page-link a {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 5.5px;
+  font-size: 13.751px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 1;
+  /* 12.538px */
+  text-transform: uppercase;
+  padding: 8px 10px;
+  border-radius: 55.004px;
+  border: 1.5px solid var(--2, #0C62FD);
+}
+@media (max-width: 1599px) {
+  .affstream-services .affstream-services-container .service-card .card-container .page-link a {
+    font-size: 12px;
+  }
+}
+@media (max-width: 767px) {
+  .affstream-services .affstream-services-container .service-card .card-container .page-link a {
+    width: fit-content;
+  }
+}
 .affstream-services .affstream-services-container .service-card .card-container .links {
   gap: 10px;
   display: flex;
   flex-direction: column;
-}
-@media (max-width: 1023px) {
-  .affstream-services .affstream-services-container .service-card .card-container .links {
-    flex-direction: row;
-  }
 }
 @media (max-width: 767px) {
   .affstream-services .affstream-services-container .service-card .card-container .links {
