--- a/wp-content/themes/affstream/blocks/media-intro/style.scss
+++ b/wp-content/themes/affstream/blocks/media-intro/style.scss
@@ -71,6 +71,8 @@
         .swiper-slide{
           img{
             height: auto;
+            border-radius: 15px;
+            overflow: hidden;
           }
         }
         .prev,.next{
