--- a/wp-content/themes/affstream/blocks/media-intro/style.css
+++ b/wp-content/themes/affstream/blocks/media-intro/style.css
@@ -51,6 +51,8 @@
 }
 .intro-media-section .container .inner-slider .intro-media-slider .swiper-slide img {
   height: auto;
+  border-radius: 15px;
+  overflow: hidden;
 }
 @media (max-width: 767px) {
   .intro-media-section .container .inner-slider .intro-media-slider .prev, .intro-media-section .container .inner-slider .intro-media-slider .next {
