--- a/wp-content/themes/affstream/styles/media.css
+++ b/wp-content/themes/affstream/styles/media.css
@@ -602,6 +602,7 @@ body.page-template-media.custom-background {
   line-height: normal;
   text-transform: uppercase;
   margin: 0;
+  text-align: center;
 }
 @media (max-width: 1023px) {
   .page-template-archive-services .posts-section .title-container h1, .page-template-archive-services .posts-section .title-container h2, .tax-service-category .posts-section .title-container h1, .tax-service-category .posts-section .title-container h2, .page-template-archive-reviews .posts-section .title-container h1, .page-template-archive-reviews .posts-section .title-container h2, .page-template-archive-university .posts-section .title-container h1, .page-template-archive-university .posts-section .title-container h2, .page-template-archive-interviews .posts-section .title-container h1, .page-template-archive-interviews .posts-section .title-container h2, .page-template-archive-news .posts-section .title-container h1, .page-template-archive-news .posts-section .title-container h2, .tax-reviews-categories .posts-section .title-container h1, .tax-reviews-categories .posts-section .title-container h2 {
@@ -613,6 +614,7 @@ body.page-template-media.custom-background {
     font-size: 33px;
     margin-bottom: 0;
     margin: 0 auto;
+    text-align: start;
   }
 }
 .page-template-archive-services .posts-section .title-container .description, .tax-service-category .posts-section .title-container .description, .page-template-archive-reviews .posts-section .title-container .description, .page-template-archive-university .posts-section .title-container .description, .page-template-archive-interviews .posts-section .title-container .description, .page-template-archive-news .posts-section .title-container .description, .tax-reviews-categories .posts-section .title-container .description {
@@ -644,227 +646,6 @@ body.page-template-media.custom-background {
 @media (max-width: 767px) {
   .page-template-archive-services .posts-section .title-container .description p, .tax-service-category .posts-section .title-container .description p, .page-template-archive-reviews .posts-section .title-container .description p, .page-template-archive-university .posts-section .title-container .description p, .page-template-archive-interviews .posts-section .title-container .description p, .page-template-archive-news .posts-section .title-container .description p, .tax-reviews-categories .posts-section .title-container .description p {
     font-size: 16px;
-  }
-}
-
-.service-card {
-  border-radius: 10px;
-  background: #FFF;
-  margin-bottom: 20px;
-  align-items: center;
-  border-radius: 10px;
-  background: #FFF;
-  position: relative;
-}
-.service-card:last-child {
-  margin-bottom: 0;
-}
-.service-card .top-style {
-  display: flex;
-  align-items: center;
-  color: #FFF;
-  leading-trim: both;
-  text-edge: cap;
-  font-family: "SF Pro Display", sans-serif;
-  font-size: 25px;
-  font-style: italic;
-  font-weight: 900;
-  line-height: normal;
-  text-transform: uppercase;
-  padding: 10px;
-  height: fit-content;
-}
-.service-card .is-top {
-  position: absolute;
-  left: -10px;
-  bottom: 0;
-  z-index: 1;
-  top: 50%;
-  transform: translate(-100%, -50%);
-}
-@media (max-width: 1400px) {
-  .service-card .is-top {
-    display: none;
-  }
-}
-@media (max-width: 1023px) {
-  .service-card {
-    grid-template-columns: 150px 1fr 200px auto;
-    gap: 20px;
-  }
-}
-@media (max-width: 767px) {
-  .service-card {
-    grid-template-columns: 1fr;
-    gap: 20px;
-  }
-}
-.service-card .card-container {
-  display: grid;
-  grid-template-columns: 200px 40% auto auto;
-  grid-column-gap: 40px;
-  position: relative;
-  background: #FFFFFF;
-  z-index: 22;
-  align-items: center;
-  padding: 40px;
-  box-shadow: 0px 0px 7.89547px 0px rgba(0, 0, 0, 0.25);
-  border-radius: 10px;
-  overflow: hidden;
-}
-@media (max-width: 1599px) {
-  .service-card .card-container {
-    padding: 25px;
-    grid-template-columns: 200px 45% auto 120px;
-    grid-column-gap: 20px;
-  }
-}
-@media (max-width: 1400px) {
-  .service-card .card-container {
-    grid-template-columns: 200px 40% auto 70px 10%;
-  }
-}
-@media (max-width: 1023px) {
-  .service-card .card-container {
-    grid-template-columns: 1fr 1fr;
-    grid-row-gap: 20px;
-  }
-}
-@media (max-width: 767px) {
-  .service-card .card-container {
-    grid-template-columns: 1fr;
-    padding: 20px 15px;
-  }
-}
-@media (min-width: 1400px) {
-  .service-card .card-container .is-top-inner {
-    display: none;
-  }
-}
-@media (max-width: 1023px) {
-  .service-card .card-container .is-top-inner {
-    display: none;
-  }
-}
-@media (max-width: 1023px) {
-  .service-card .card-container .service-icon {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-  }
-}
-.service-card .card-container .service-icon img {
-  width: fit-content;
-}
-.service-card .card-container .service-icon .is-top-mobile {
-  display: none;
-}
-@media (max-width: 1023px) {
-  .service-card .card-container .service-icon .is-top-mobile {
-    display: block;
-    font-size: 18px;
-    padding: 7px;
-  }
-}
-.service-card .card-container .service-description p {
-  color: #100F0F;
-  leading-trim: both;
-  text-edge: cap;
-  font-size: 20px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: normal;
-  margin-bottom: 0;
-}
-@media (max-width: 1599px) {
-  .service-card .card-container .service-description p {
-    font-size: 18px;
-  }
-}
-@media (max-width: 1023px) {
-  .service-card .card-container .service-description p {
-    font-size: 14px;
-  }
-}
-.service-card .card-container .monthly-price p {
-  color: #0C62FD;
-  leading-trim: both;
-  text-edge: cap;
-  font-size: 16px;
-  font-style: normal;
-  font-weight: 500;
-  line-height: normal;
-  margin-bottom: 0;
-}
-@media (max-width: 1023px) {
-  .service-card .card-container .monthly-price p {
-    font-size: 14px;
-  }
-}
-.service-card .card-container .page-link a {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  gap: 5.5px;
-  font-size: 13.751px;
-  font-style: normal;
-  font-weight: 700;
-  line-height: 1;
-  /* 12.538px */
-  text-transform: uppercase;
-  padding: 8px 10px;
-  border-radius: 55.004px;
-  border: 1.5px solid var(--2, #0C62FD);
-}
-@media (max-width: 1599px) {
-  .service-card .card-container .page-link a {
-    font-size: 12px;
-  }
-}
-@media (max-width: 767px) {
-  .service-card .card-container .page-link a {
-    width: fit-content;
-  }
-}
-.service-card .card-container .links {
-  gap: 10px;
-  display: flex;
-  flex-direction: column;
-}
-@media (max-width: 767px) {
-  .service-card .card-container .links {
-    flex-direction: row;
-    gap: 20px;
-  }
-}
-.service-card .card-container .links .page-link {
-  width: fit-content;
-  display: flex;
-  gap: 5.5px;
-  font-size: 13.751px;
-  font-style: normal;
-  font-weight: 700;
-  line-height: 91.182%;
-  text-transform: uppercase;
-  padding: 8px 10px;
-  border-radius: 55.004px;
-  color: #0C62FD;
-  border: 1.5px solid #0C62FD;
-  transition: all 0.2s ease-in;
-}
-.service-card .card-container .links .page-link svg {
-  transition: all 0.2s ease-in;
-}
-.service-card .card-container .links .page-link:hover {
-  background: #0C62FD;
-  color: #fff;
-}
-.service-card .card-container .links .page-link:hover svg path {
-  fill: #fff;
-}
-@media (max-width: 767px) {
-  .service-card .card-container .links .page-link {
-    width: fit-content;
   }
 }
 
