--- a/wp-content/themes/affstream/styles/media.scss
+++ b/wp-content/themes/affstream/styles/media.scss
@@ -612,7 +612,7 @@ body.page-template-media.custom-background {
         line-height: normal;
         text-transform: uppercase;
         margin: 0;
-
+        text-align: center;
         @include breakpoint(tablet) {
           font-size: 48px;
         }
@@ -620,6 +620,7 @@ body.page-template-media.custom-background {
           font-size: 33px;
           margin-bottom: 0;
           margin: 0 auto;
+          text-align: start;
         }
       }
 
@@ -655,217 +656,7 @@ body.page-template-media.custom-background {
 
 
 
-.service-card {
-  border-radius: 10px;
-  background: #FFF;
-  margin-bottom: 20px;
-  align-items: center;
-  border-radius: 10px;
-  background: #FFF;
-  position: relative;
 
-  &:last-child {
-    margin-bottom: 0;
-  }
-  .top-style{
-    display: flex;
-    align-items: center;
-    color: #FFF;
-    leading-trim: both;
-    text-edge: cap;
-    font-family: "SF Pro Display", sans-serif;
-    font-size: 25px;
-    font-style: italic;
-    font-weight: 900;
-    line-height: normal;
-    text-transform: uppercase;
-    padding: 10px;
-    height: fit-content;
-  }
-  .is-top {
-    position: absolute;
-    left: -10px;
-    bottom: 0;
-    z-index: 1;
-    top: 50%;
-    transform: translate(-100%, -50%);
-    @media (max-width: 1400px) {
-      display: none;
-    }
-  }
-
-  @include breakpoint(tablet) {
-    grid-template-columns: 150px 1fr 200px auto;
-    gap: 20px;
-  }
-  @include breakpoint(mobile) {
-    grid-template-columns: 1fr;
-    gap: 20px;
-  }
-
-
-  .card-container {
-    display: grid;
-    grid-template-columns: 200px 40% auto auto;
-    grid-column-gap: 40px;
-    position: relative;
-    background: #FFFFFF;
-    z-index: 22;
-    align-items: center;
-    padding: 40px;
-    box-shadow: 0px 0px 7.89547px 0px rgba(0, 0, 0, 0.25);
-    border-radius: 10px;
-    overflow: hidden;
-
-    @include breakpoint(desktop) {
-      padding: 25px;
-      grid-template-columns: 200px 45% auto 120px;
-      grid-column-gap: 20px;
-    }
-    @media (max-width: 1400px) {
-      grid-template-columns: 200px 40% auto 70px 10%;
-    }
-    @include breakpoint(tablet) {
-      grid-template-columns: 1fr 1fr;
-      grid-row-gap: 20px;
-    }
-    @include breakpoint(mobile) {
-      grid-template-columns: 1fr;
-      padding: 20px 15px;
-    }
-    .is-top-inner{
-      @media (min-width: 1400px) {
-          display: none;
-      }
-      @include breakpoint(tablet){
-        display: none;
-      }
-    }
-    .service-icon {
-      @include breakpoint(tablet){
-        display: flex;
-        align-items: center;
-        justify-content: space-between;
-      }
-      img {
-        width: fit-content;
-      }
-      .is-top-mobile{
-        display: none;
-        @include breakpoint(tablet){
-          display: block;
-          font-size: 18px;
-          padding: 7px;
-        }
-      }
-    }
-
-    .service-description {
-      p {
-        color: #100F0F;
-        leading-trim: both;
-        text-edge: cap;
-        font-size: 20px;
-        font-style: normal;
-        font-weight: 400;
-        line-height: normal;
-        margin-bottom: 0;
-        @include breakpoint(desktop) {
-          font-size: 18px;
-        }
-        @include breakpoint(tablet) {
-          font-size: 14px;
-        }
-      }
-    }
-
-    .monthly-price {
-      p {
-        color: #0C62FD;
-        leading-trim: both;
-        text-edge: cap;
-        font-size: 16px;
-        font-style: normal;
-        font-weight: 500;
-        line-height: normal;
-        margin-bottom: 0;
-        @include breakpoint(tablet) {
-          font-size: 14px;
-        }
-      }
-    }
-
-    .page-link {
-      a {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        gap: 5.5px;
-        font-size: 13.751px;
-        font-style: normal;
-        font-weight: 700;
-        line-height: 1; /* 12.538px */
-        text-transform: uppercase;
-        padding: 8px 10px;
-        border-radius: 55.004px;
-        border: 1.5px solid var(--2, #0C62FD);
-        @include breakpoint(desktop) {
-          font-size: 12px;
-        }
-        @include breakpoint(mobile) {
-          width: fit-content;
-
-        }
-      }
-    }
-
-    .links {
-      gap: 10px;
-      display: flex;
-      flex-direction: column;
-      @include breakpoint(mobile) {
-        flex-direction: row;
-        gap: 20px;
-      }
-
-      .page-link {
-        width: fit-content;
-        display: flex;
-        gap: 5.5px;
-        font-size: 13.751px;
-        font-style: normal;
-        font-weight: 700;
-        line-height: 91.182%;
-        text-transform: uppercase;
-        padding: 8px 10px;
-        border-radius: 55.004px;
-        color: #0C62FD;
-        border: 1.5px solid #0C62FD;
-        transition: all 0.2s ease-in;
-
-        svg {
-          transition: all 0.2s ease-in;
-        }
-
-        &:hover {
-          background: #0C62FD;
-          color: #fff;
-
-          svg {
-            path {
-              fill: #fff;
-            }
-          }
-        }
-
-        @include breakpoint(mobile) {
-          width: fit-content;
-        }
-      }
-    }
-
-  }
-}
 
 .page-template-media {
   .footer-cooperation {
