--- a/wp-content/themes/affstream/styles/single-page.scss
+++ b/wp-content/themes/affstream/styles/single-page.scss
@@ -13,16 +13,19 @@
     max-width: 1300px;
     justify-content: space-between;
     @include breakpoint(desktop){
-      max-width: 1200px;
       padding: 0 16px;
-      gap: 70px;
+      gap: 50px;
     }
-
+    @media (max-width: 1285px) {
+      flex-wrap: wrap;
+    }
     @include breakpoint(tablet){
       gap: 35px;
+
     }
     @include breakpoint(mobile){
       flex-direction: column;
+      gap: 0;
     }
     .category-and-time {
       display: flex;
@@ -198,6 +201,7 @@
       box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.25);
       padding: 15px 25px;
       margin-top: 25px;
+      margin-bottom: 25px;
       align-items: center;
       justify-content: space-between;
       gap: 40px;
