--- a/wp-content/themes/affstream/blocks/affstream-services/style.scss
+++ b/wp-content/themes/affstream/blocks/affstream-services/style.scss
@@ -61,13 +61,13 @@
   }
 
   .field-title {
-    grid-template-columns: 200px repeat(2, 1fr);
+    grid-template-columns: 200px 40% auto 70px 10%;
     display: grid;
     padding: 10px 40px;
+    grid-column-gap: 20px;
     @include breakpoint(mobile) {
       display: none;
     }
-
     .column-name {
       color: #100F0F;
       leading-trim: both;
@@ -117,6 +117,9 @@
             height: 50px;
           }
         }
+        @include breakpoint(mobile){
+          display: none;
+        }
       }
 
       &:last-child {
@@ -136,6 +139,17 @@
         text-transform: uppercase;
         padding: 10px;
         height: fit-content;
+      }
+      .from-ukraine{
+        height: 80px;
+        border: 3px solid #FFD700;
+        border-radius: 8px;
+        display: flex;
+        width: 100%;
+        max-width: 100%;
+        padding: 10px;
+        justify-content: space-between;
+
       }
       .is-top {
         position: absolute;
@@ -216,6 +230,12 @@
           }
           img {
             width: fit-content;
+          }
+          .container{
+            display: flex;
+            width: 100%;
+            margin: 0;
+            padding: 0;
           }
           .is-top-mobile{
             display: none;
