--- a/wp-content/themes/affstream/styles/main.css
+++ b/wp-content/themes/affstream/styles/main.css
@@ -4180,9 +4180,13 @@ footer .container .social .social-links .mail-link {
 }
 @media (max-width: 1599px) {
   .single-page .container {
-    max-width: 1200px;
     padding: 0 16px;
-    gap: 70px;
+    gap: 50px;
+  }
+}
+@media (max-width: 1285px) {
+  .single-page .container {
+    flex-wrap: wrap;
   }
 }
 @media (max-width: 1023px) {
@@ -4193,6 +4197,7 @@ footer .container .social .social-links .mail-link {
 @media (max-width: 767px) {
   .single-page .container {
     flex-direction: column;
+    gap: 0;
   }
 }
 .single-page .container .category-and-time {
@@ -4385,6 +4390,7 @@ footer .container .social .social-links .mail-link {
   box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.25);
   padding: 15px 25px;
   margin-top: 25px;
+  margin-bottom: 25px;
   align-items: center;
   justify-content: space-between;
   gap: 40px;
